# shipment_fastapi

./: pyproject.toml
app/: main.py  schemas.py
